refactor: auth module layout

--- a/src/app/modules/auth/pages/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/pages/forgot-password/forgot-password.component.html
@@ -8,7 +8,6 @@
 		<p class="text-sm text-gray-400 dark:text-night-200">Some description about this login page here.</p>
 	</div>
 
-	<input type="hidden" name="remember" value="true" />
 	<div class="space-y-3 text-left">
 		<div class="relative">
 			<input type="text" id="email" class="peer block" placeholder=" " />
@@ -18,26 +17,11 @@
 				Email address
 			</label>
 		</div>
-		<div class="relative">
-			<input type="password" id="password" class="peer block" placeholder=" " />
-			<label
-				for="password"
-				class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200">
-				Password
-			</label>
-		</div>
 	</div>
 
-	<div class="flex items-center justify-between space-x-3">
-		<div class="flex items-center">
-			<input id="remember-me" name="remember-me" type="checkbox" />
-			<label for="remember-me" class="ml-2 block text-sm text-gray-500 dark:text-night-200"> Remember me </label>
-		</div>
-
+	<div class="flex items-center justify-end space-x-3">
 		<div class="text-sm">
-			<a routerLink="/auth/forgot-password" class="font-medium text-primary-600 hover:text-primary-500">
-				Forgot your password?
-			</a>
+			<a routerLink="/auth/sign-in" class="font-medium text-primary-600 hover:text-primary-500"> Forgot your password? </a>
 		</div>
 	</div>
 
