feat: add patterns

--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="flex h-screen w-screen">
-	<div class="relative hidden flex-1 items-center justify-center bg-[url('./assets/bg/auth.png')] bg-cover lg:flex">
-		<div class="absolute h-full w-full bg-primary-500/90"></div>
-		<div class="absolute m-20 max-w-xl space-y-4 text-center text-white">
+	<div class="auth-bg relative hidden flex-1 items-center justify-center bg-cover lg:flex">
+		<!-- <div class="absolute h-full w-full bg-primary-500/90"></div> -->
+		<div class="absolute max-w-xl space-y-4 p-8 text-center text-white">
 			<img src="./assets/images/auth-screens.png" alt="dashboard widget" />
 			<h1 class="text-4xl font-bold">"Fast, Efficient and Productive"</h1>
 			<p class="text-xs font-light">
