refactor: auth layout

--- a/src/app/modules/auth/pages/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/pages/forgot-password/forgot-password.component.html
@@ -1,11 +1,7 @@
-<!-- login form -->
 <form class="mt-10 space-y-6">
-	<div class="space-y-1">
-		<h2 class="flex items-center justify-center text-3xl font-semibold text-gray-700 dark:text-white">
-			Forgot Password
-			<p class="text-primary-500">?</p>
-		</h2>
-		<p class="text-sm text-gray-400 dark:text-night-200">Some description about this login page here.</p>
+	<div class="text-center">
+		<h2 class="mb-1 text-3xl font-semibold text-gray-700 dark:text-white">Forgot Password <span class="text-primary-500">?</span></h2>
+		<p class="text-sm text-gray-400 dark:text-night-200">Enter your email to reset your password.</p>
 	</div>
 
 	<div class="space-y-3 text-left">
@@ -19,19 +15,18 @@
 		</div>
 	</div>
 
-	<div class="flex items-center justify-end space-x-3">
-		<div class="text-sm">
-			<a routerLink="/auth/sign-in" class="font-medium text-primary-600 hover:text-primary-500"> Forgot your password? </a>
-		</div>
-	</div>
-
 	<!-- Submit Button -->
-	<div>
+	<div class="flex justify-between space-x-2">
 		<button
-			type="submit"
-			routerLink="/dashboard"
+			type="button"
 			class="group relative flex w-full justify-center rounded-md border border-transparent bg-primary-500 py-2 px-4 text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-primary-400">
-			Sign in
+			Submit
+		</button>
+		<button
+			type="button"
+			routerLink="/auth/sign-in"
+			class="group relative flex w-full justify-center rounded-md border border-transparent bg-gray-50 py-2 px-4 text-sm font-medium text-gray-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-gray-100 dark:bg-night-600 dark:text-night-200 dark:hover:bg-night-500">
+			Cancel
 		</button>
 	</div>
 </form>
