feat: add new password and two steps pages

--- a/src/app/modules/auth/pages/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/pages/sign-in/sign-in.component.html
@@ -1,5 +1,5 @@
 <!-- login form -->
-<form class="mt-10 space-y-6">
+<form class="my-10 space-y-6">
 	<div class="text-center">
 		<h2 class="mb-1 text-3xl font-semibold text-gray-700 dark:text-white">Hello Again <span class="text-primary-500">!</span></h2>
 		<p class="text-sm text-gray-400 dark:text-night-200">Enter your credential to access your account.</p>
