--- a/src/app/modules/auth/pages/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/pages/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<form class="mt-10 space-y-6">
+<form class="my-10 space-y-6">
 	<div class="text-center">
 		<h2 class="mb-1 text-3xl font-semibold text-gray-700 dark:text-white">Forgot Password <span class="text-primary-500">?</span></h2>
 		<p class="text-sm text-gray-400 dark:text-night-200">Enter your email to reset your password.</p>
