--- a/src/app/modules/auth/pages/new-password/new-password.component.html
+++ b/src/app/modules/auth/pages/new-password/new-password.component.html
@@ -1,31 +1,12 @@
 <form class="my-10 space-y-6">
 	<div class="text-center">
-		<h2 class="mb-1 text-3xl font-semibold text-gray-700 dark:text-white">Sign Up <span class="text-primary-500">!</span></h2>
-		<p class="text-sm text-gray-400 dark:text-night-200">Let's get started with your 30 day free trial</p>
-	</div>
-
-	<button
-		type="button"
-		routerLink="/dashboard"
-		class="flex w-full items-center justify-center rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-400 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-gray-50 dark:border-night-500 dark:bg-night-700 dark:text-night-200 dark:hover:bg-night-600">
-		<svg-icon src="assets/icons/google-logo.svg" [svgClass]="'h-6 w-6 mr-2'"> </svg-icon>
-		Log in with Google
-	</button>
-
-	<div
-		class="my-4 flex items-center before:mt-0.5 before:flex-1 before:border-t before:border-gray-300 after:mt-0.5 after:flex-1 after:border-t after:border-gray-300 dark:before:border-night-500 dark:after:border-night-500">
-		<p class="mx-4 mb-0 text-center text-sm text-gray-400 dark:text-night-400">or</p>
+		<h2 class="mb-1 text-3xl font-semibold text-gray-700 dark:text-white">Setup New Password</h2>
+		<p class="text-sm text-gray-400 dark:text-night-200">
+			Have you already reset the password ? <a class="text-primary-500" routerLink="/auth/sign-in"> Sign in</a>
+		</p>
 	</div>
 
 	<div class="space-y-3 text-left">
-		<div class="relative">
-			<input type="text" id="email" class="peer block" placeholder=" " />
-			<label
-				for="email"
-				class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-500 dark:bg-night-700 dark:text-night-200">
-				Email address
-			</label>
-		</div>
 		<div class="relative">
 			<input type="password" id="password" class="peer block" placeholder=" " />
 			<label
@@ -56,26 +37,10 @@
 		</div>
 	</div>
 
-	<div class="flex items-center justify-between space-x-3">
-		<div class="flex items-center">
-			<input id="accept-term" name="accept-term" type="checkbox" />
-			<label for="accept-term" class="ml-2 block text-sm text-gray-400 dark:text-night-200">
-				I Accept the
-				<a class="font-medium text-primary-500 hover:text-primary-400"> Terms </a>
-			</label>
-		</div>
-	</div>
-
 	<!-- Submit Button -->
 	<button
 		type="button"
-		routerLink="/dashboard"
 		class="group relative mb-10 flex w-full justify-center rounded-md border border-transparent bg-primary-500 py-2 px-4 text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-primary-400">
-		Sign up
+		Submit
 	</button>
-
-	<!-- Sign-up -->
-	<div class="text-sm text-gray-400 dark:text-night-200">
-		Already have an Account? <a routerLink="/auth/sign-in" class="text-primary-500 hover:text-primary-400">Sign in</a>
-	</div>
 </form>
