--- a/src/app/modules/auth/pages/two-steps/two-steps.component.html
+++ b/src/app/modules/auth/pages/two-steps/two-steps.component.html
@@ -40,6 +40,7 @@
 
 	<!-- Submit Button -->
 	<button
+		routerLink="/dashboard"
 		type="button"
 		class="relative flex w-full justify-center rounded-md border border-transparent bg-primary-500 py-2 px-4 text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-primary-400">
 		Submit
