--- a/src/app/modules/layout/components/sidebar/sidebar.component.html
+++ b/src/app/modules/layout/components/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
 			</div>
 			<button
 				(click)="toggleSidebar()"
-				class="absolute top-2 right-2 flex h-5 w-5 items-center justify-center rounded opacity-20 transition-all duration-200 focus:outline-none hover:opacity-70 dark:text-slate-100"
+				class="absolute top-2 right-2 flex h-5 w-5 items-center justify-center rounded text-gray-400 transition-all duration-200 focus:outline-none hover:text-gray-500 dark:text-night-400 dark:hover:text-night-300"
 				[ngClass]="{ 'rotate-180': !(showSideBar$ | async) }">
 				<svg-icon src="assets/icons/solid/chevron-double-left.svg"> [svgClass]="'h-5 w-5'"> </svg-icon>
 			</button>
