refactor: change app name

--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -20,7 +20,7 @@
         <a class="rounded bg-primary-500 p-2">
           <svg-icon src="assets/icons/logo.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
         </a>
-        <b class="text-md pl-3 font-bold text-gray-700 dark:text-white"> Finance </b>
+        <b class="text-md pl-3 font-bold text-gray-700 dark:text-white"> Angular Tailwind </b>
       </div>
       <!-- Route -->
       <router-outlet></router-outlet>
