--- a/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
@@ -24,7 +24,7 @@
             <a class="flex items-center justify-center rounded bg-primary-500 p-2 focus:outline-none focus:ring-1">
               <svg-icon src="assets/icons/logo.svg"> [svgClass]="'h-5 w-5'"> </svg-icon>
             </a>
-            <b class="pl-3 text-sm font-bold dark:text-night-50"> Finance </b>
+            <b class="pl-3 text-sm font-bold dark:text-night-50"> Angular Tailwind </b>
           </div>
         </div>
         <div class="-mr-2">
