--- a/src/app/modules/layout/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         <a class="flex items-center justify-center rounded bg-primary-500 p-2 focus:outline-none focus:ring-1">
           <svg-icon src="assets/icons/logo.svg"> [svgClass]="'h-5 w-5'"> </svg-icon>
         </a>
-        <b class="hidden pl-3 text-sm font-bold dark:text-night-50 sm:block"> Finance </b>
+        <b class="hidden pl-3 text-sm font-bold dark:text-night-50 sm:block"> Angular Tailwind </b>
       </div>
 
       <!-- Desktop Menu -->
