--- a/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
@@ -13,7 +13,7 @@
       ? 'pointer-events-auto scale-100 animate-fade-in-up opacity-100 duration-200'
       : 'pointer-events-none scale-95 opacity-0 duration-100 ease-out'
   "
-  class="absolute inset-x-0 top-0 origin-top-right transform p-2 transition md:hidden z-10">
+  class="absolute inset-x-0 top-0 z-10 origin-top-right transform p-2 transition md:hidden">
   <div
     class="divide-y-2 divide-gray-50 rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5 dark:bg-night-700">
     <div class="pt-5 pb-6">
