fix: add the correct formcontrol name in the validation

--- a/src/app/modules/auth/pages/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/pages/sign-in/sign-in.component.html
@@ -64,8 +64,8 @@
           </svg-icon>
         </span>
       </div>
-      <div *ngIf="submitted && f['email'].errors" class="is__invalid-error">
-        <div *ngIf="f['email'].errors['required']">Required field</div>
+      <div *ngIf="submitted && f['password'].errors" class="is__invalid-error">
+        <div *ngIf="f['password'].errors['required']">Required field</div>
       </div>
     </div>
   </div>
