feat: add footer to layout

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -7,12 +7,12 @@
     <app-navbar></app-navbar>
     <!-- main content -->
     <div
-      class="scrollbar-thumb-rounded scrollbar-track-rounded overflow-auto scrollbar-thin scrollbar-thumb-white scrollbar-track-gray-100 dark:scrollbar-thumb-night-700 dark:scrollbar-track-night-800">
+      class="scrollbar-thumb-rounded scrollbar-track-rounded flex-1 overflow-auto scrollbar-thin scrollbar-thumb-white scrollbar-track-gray-100 dark:scrollbar-thumb-night-700 dark:scrollbar-track-night-800">
       <router-outlet></router-outlet>
     </div>
 
     <!-- footer -->
-    <!-- <app-footer></app-footer> -->
+    <app-footer></app-footer>
 
     <!-- Bottom bar -->
     <!-- <app-bottom-navbar></app-bottom-navbar> -->
