refactor: display name on sidebar menu

--- a/src/app/modules/layout/components/sidebar/sidebar.component.html
+++ b/src/app/modules/layout/components/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
           <svg-icon src="assets/icons/logo.svg"> </svg-icon>
         </a>
         <b class="ml-1 pl-2 text-sm font-bold dark:text-night-50">
-          {{ appJson.name }}
+          {{ appJson.displayName }}
         </b>
       </div>
       <button
