fix: layout content size with footer

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -2,12 +2,12 @@
   <!-- Sidebar -->
   <app-sidebar></app-sidebar>
 
-  <div class="grid flex-grow content-start bg-gray-100 dark:bg-night-800">
+  <div class="flex grow flex-col content-start bg-gray-100 dark:bg-night-800">
     <!-- Header -->
     <app-navbar></app-navbar>
     <!-- main content -->
     <div
-      class="scrollbar-thumb-rounded scrollbar-track-rounded flex-1 overflow-auto scrollbar-thin scrollbar-thumb-white scrollbar-track-gray-100 dark:scrollbar-thumb-night-700 dark:scrollbar-track-night-800">
+      class="scrollbar-thumb-rounded scrollbar-track-rounded grow overflow-auto scrollbar-thin scrollbar-thumb-white scrollbar-track-gray-100 dark:scrollbar-thumb-night-700 dark:scrollbar-track-night-800">
       <router-outlet></router-outlet>
     </div>
 
