--- a/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
@@ -34,7 +34,7 @@
             class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-primary-500 hover:bg-gray-100 hover:text-gray-500 dark:text-night-300 dark:hover:bg-night-600 dark:hover:text-night-200">
             <span class="sr-only">Close menu</span>
             <!-- Heroicon name: outline/x -->
-            <svg-icon src="assets/icons/outline/x.svg"> </svg-icon>
+            <svg-icon src="assets/icons/heroicons/outline/x.svg"> </svg-icon>
           </button>
         </div>
       </div>
