refactor: music player component

--- a/src/app/modules/dashboard/components/podcast/podcast-player/podcast-player.component.html
+++ b/src/app/modules/dashboard/components/podcast/podcast-player/podcast-player.component.html
@@ -1,21 +1,20 @@
-<div class="flex h-[300px] flex-col justify-between rounded-lg bg-black">
+<div class="flex h-[300px] flex-col justify-between rounded-lg bg-night-700">
   <div class="flex items-center justify-between px-8 pt-8">
     <span class="text-lg font-semibold text-white">Player</span>
   </div>
-  <div class="flex flex-col justify-between gap-4 px-8 text-white">
+  <div class="flex grow flex-col items-center justify-center">
     <img
-      class="h-20 w-20 rounded-lg p-1 ring-2 ring-primary-500 dark:ring-gray-500"
+      class="h-20 w-20 rounded-full p-1 ring-2 ring-primary-500"
       src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/cool-album-cover-image-design-template-62fca565fdcbb25ced8e900c54d61835_screen.jpg?ts=1561530580"
       alt="Bordered avatar" />
-
-    <div class="flex items-center justify-between text-sm text-gray-400">
-      <span>01:10</span>
-      <span>35:10</span>
-    </div>
+  </div>
+  <div class="flex items-center justify-between py-4 px-4 text-xs text-gray-400">
+    <span>01:10</span>
+    <span>35:10</span>
   </div>
   <div class="relative flex h-20 flex-col justify-center rounded-b-lg bg-primary-500">
     <div class="cursor-pointer">
-      <div class="absolute top-0 right-0 left-0 h-1 bg-gray-400"></div>
+      <div class="absolute top-0 right-0 left-0 h-1 bg-night-500"></div>
       <div class="absolute top-0 right-0 left-0 h-1 w-5 bg-white"></div>
       <div class="absolute -top-1.5 right-0 left-5 h-4 w-4 rounded-full bg-primary-600"></div>
     </div>
