--- a/src/app/modules/dashboard/components/podcast/podcast-card-banner/podcast-card-banner.component.html
+++ b/src/app/modules/dashboard/components/podcast/podcast-card-banner/podcast-card-banner.component.html
@@ -1,12 +1,10 @@
 <div
-  class="flex h-[300px] flex-grow flex-col rounded-lg bg-[#ffb010] bg-contain bg-right-top bg-no-repeat"
-  style="
-    background-image: url('https://img.freepik.com/free-photo/jocund-woman-listening-favorite-song_197531-16485.jpg?w=1380&t=st=1679592182~exp=1679592782~hmac=378d75df9f74b09613a0e6512c22c5ce39c79a590e393c92310b995baefdd5e4');
-  ">
+  class="flex h-[300px] flex-grow flex-col rounded-lg bg-green-800 bg-contain bg-right-top bg-no-repeat"
+  style="background-image: url('assets/images/podcast-episode.png')">
   <div class="flex flex-col justify-between p-10">
     <div class="mb-14 pt-0">
-      <h3 class="mb-4 text-5xl font-semibold text-white">Episode 9</h3>
-      <span class="fs-4 d-block lh-0 mb-8 font-semibold text-white">with Jhon Doe</span>
+      <h3 class="mb-4 text-5xl font-semibold text-white">More Minimal</h3>
+      <span class="fs-4 d-block lh-0 mb-8 font-semibold text-white">with Nazriel Sona</span>
       <div class="mt-2 flex items-center gap-2">
         <div class="flex items-center gap-2">
           <a class="rounded-full bg-green-500 p-1">
@@ -24,11 +22,14 @@
     </div>
     <div class="flex gap-2">
       <button
-        class="flex-none rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
-        Save for Later
+        class="flex items-center gap-1 rounded-md bg-primary-500 px-4 py-2.5 text-xs font-semibold text-white hover:bg-primary-600">
+        <div class="rounded-full bg-white p-1">
+          <svg-icon src="assets/icons/heroicons/solid/play.svg" [svgClass]="'h-2 w-2 text-green-500'"></svg-icon>
+        </div>
+        Listen Now
       </button>
       <button class="flex-none rounded-md border border-white px-4 py-2.5 text-xs font-semibold text-white">
-        Listen Now
+        Add to Playlist
       </button>
     </div>
   </div>
