--- a/src/app/modules/dashboard/components/podcast/podcast-card-item/podcast-card-item.component.html
+++ b/src/app/modules/dashboard/components/podcast/podcast-card-item/podcast-card-item.component.html
@@ -1,11 +1,32 @@
-<div class="space-y-3 rounded-lg bg-white p-4">
-  <div class="relative w-full" style="padding-bottom: 100%">
-    <div class="absolute top-0 right-0 bottom-0 left-0 overflow-hidden rounded-md">
-      <img [src]="image" class="object-cover" />
+<div class="group relative isolate w-full rounded-md bg-white p-4 text-gray-200 dark:bg-night-700">
+  <div class="h-full">
+    <div class="relative mb-4">
+      <div class="relative pb-[100%]">
+        <div>
+          <img
+            [src]="image"
+            data-testid="card-image"
+            alt=""
+            class="absolute left-0 top-0 h-full w-full object-cover object-center" />
+        </div>
+      </div>
+      <div
+        class="pointer-events-none absolute bottom-6 right-4 translate-y-8 cursor-pointer opacity-0 transition-all duration-300 group-hover:translate-y-[8px] group-hover:opacity-100">
+        <div>
+          <button class="inline-block cursor-pointer rounded-full text-center">
+            <span class="flex rounded-full bg-primary-500 p-2">
+              <span aria-hidden="true">
+                <svg role="img" height="24" width="24" aria-hidden="true" viewBox="0 0 24 24">
+                  <path
+                    d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606z"></path>
+                </svg>
+              </span>
+            </span>
+          </button>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="inline-block">
-    <div class="text-sm font-semibold">{{ title }}</div>
-    <div class="text-xs text-gray-400">{{ subtitle }}</div>
+    <div class="truncate text-sm font-semibold text-black dark:text-night-50">{{ title }}</div>
+    <div class="truncate text-xs text-gray-500 dark:text-night-300">{{ subtitle }}</div>
   </div>
 </div>
