--- a/src/app/modules/dashboard/components/podcast/podcast-player/podcast-player.component.html
+++ b/src/app/modules/dashboard/components/podcast/podcast-player/podcast-player.component.html
@@ -1,11 +1,11 @@
 <div class="flex h-[300px] flex-col justify-between rounded-lg bg-night-700">
   <div class="flex items-center justify-between px-8 pt-8">
-    <span class="text-lg font-semibold text-white">Player</span>
+    <span class="text-lg font-semibold text-white">Podpah</span>
   </div>
   <div class="flex grow flex-col items-center justify-center">
     <img
-      class="h-20 w-20 rounded-full p-1 ring-2 ring-primary-500"
-      src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/cool-album-cover-image-design-template-62fca565fdcbb25ced8e900c54d61835_screen.jpg?ts=1561530580"
+      class="h-24 w-24 rounded-full p-1 ring-2 ring-primary-500"
+      src="https://i.scdn.co/image/ab67656300005f1fda018f5c18ecebc5d3ff3b59"
       alt="Bordered avatar" />
   </div>
   <div class="flex items-center justify-between py-4 px-4 text-xs text-gray-400">
