refactor: podcast card component

--- a/src/app/modules/dashboard/components/podcast/podcast-card-item/podcast-card-item.component.html
+++ b/src/app/modules/dashboard/components/podcast/podcast-card-item/podcast-card-item.component.html
@@ -5,8 +5,7 @@
         <div>
           <img
             [src]="image"
-            data-testid="card-image"
-            alt=""
+            alt="podcast cover image"
             class="absolute left-0 top-0 h-full w-full object-cover object-center" />
         </div>
       </div>
