refactor: change menu service to use signals

--- a/src/app/modules/layout/components/navbar/navbar-menu/navbar-menu.component.html
+++ b/src/app/modules/layout/components/navbar/navbar-menu/navbar-menu.component.html
@@ -1,4 +1,4 @@
-<div class="dropdown relative inline-block" *ngFor="let menu of pagesMenu$ | async">
+<div class="dropdown relative inline-block" *ngFor="let menu of menuService.pagesMenu">
   <!-- Button -->
   <button
     [ngClass]="
