--- a/src/app/modules/layout/components/sidebar/sidebar-submenu/sidebar-submenu.component.html
+++ b/src/app/modules/layout/components/sidebar/sidebar-submenu/sidebar-submenu.component.html
@@ -1,6 +1,6 @@
 <div
   class="max-h-0 overflow-hidden pt-1 pl-4 transition-all duration-500"
-  [ngClass]="{ hidden: !(showSideBar$ | async), 'max-h-screen': submenu.expanded }">
+  [ngClass]="{ hidden: !menuService.showSideBar, 'max-h-screen': submenu.expanded }">
   <ul class="flex flex-col border-l border-dashed border-gray-200 pl-2 text-night-200 dark:border-night-500">
     <li *ngFor="let sub of submenu.children">
       <div
@@ -29,7 +29,7 @@
             {{ sub.label }}
           </a>
           <button
-            [ngClass]="{ hidden: !(showSideBar$ | async), 'rotate-90': sub.expanded }"
+            [ngClass]="{ hidden: !menuService.showSideBar, 'rotate-90': sub.expanded }"
             class="flex items-center p-1 text-gray-400 transition-all duration-500 dark:text-night-400">
             <svg-icon src="assets/icons/heroicons/solid/chevron-right.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
           </button>
