--- a/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
+++ b/src/app/modules/layout/components/navbar/navbar-mobile/navbar-mobile.component.html
@@ -9,7 +9,7 @@
 -->
 <div
   [ngClass]="
-    (showMobileMenu$ | async)
+    menuService.showMobileMenu
       ? 'pointer-events-auto scale-100 animate-fade-in-up opacity-100 duration-200'
       : 'pointer-events-none scale-95 opacity-0 duration-100 ease-out'
   "
