style: add margin breakpoint

--- a/src/app/modules/dashboard/components/podcast/podcast-card-banner/podcast-card-banner.component.html
+++ b/src/app/modules/dashboard/components/podcast/podcast-card-banner/podcast-card-banner.component.html
@@ -2,7 +2,7 @@
   class="flex h-[300px] flex-grow flex-col rounded-lg bg-green-700 bg-contain bg-right-top bg-no-repeat"
   style="background-image: url('assets/images/podcast-episode.png')">
   <div class="flex flex-col justify-between p-10">
-    <div class="mb-14 pt-0">
+    <div class="mb-4 pt-0 sm:mb-14">
       <h3 class="mb-4 text-5xl font-semibold text-white">More Minimal</h3>
       <span class="fs-4 d-block lh-0 mb-8 font-semibold text-white">with Nazriel Sona</span>
       <div class="mt-2 flex items-center gap-2">
