--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -2,11 +2,12 @@
   <!-- Sidebar -->
   <app-sidebar></app-sidebar>
 
-  <div class="flex grow flex-col content-start bg-gray-100 dark:bg-night-800">
+  <div class="flex grow flex-col content-start overflow-hidden bg-gray-100 dark:bg-night-800">
     <!-- Header -->
     <app-navbar></app-navbar>
     <!-- main content -->
     <div
+      id="main-content"
       class="scrollbar-thumb-rounded scrollbar-track-rounded grow overflow-auto scrollbar-thin scrollbar-thumb-white scrollbar-track-gray-100 dark:scrollbar-thumb-night-700 dark:scrollbar-track-night-800">
       <router-outlet></router-outlet>
     </div>
