feat: update angular version to 17

--- a/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
+++ b/src/app/modules/layout/components/navbar/profile-menu/profile-menu.component.html
@@ -28,7 +28,7 @@
       </div>
       <div class="overflow-hidden px-2 text-sm font-semibold text-gray-700 dark:text-night-50">
         Luciano Oliveira
-        <p class="truncate text-ellipsis text-xs font-semibold text-gray-400 dark:text-night-300">me@lanno.dev</p>
+        <p class="truncate text-ellipsis text-xs font-semibold text-gray-400 dark:text-night-300">me&#64;lanno.dev</p>
       </div>
     </div>
 
