fix: submenu position

--- a/src/app/modules/layout/components/navbar/navbar-submenu/navbar-submenu.component.html
+++ b/src/app/modules/layout/components/navbar/navbar-submenu/navbar-submenu.component.html
@@ -1,4 +1,4 @@
-<ul class="mt-2 space-y-0.5 rounded-md bg-white py-3 shadow-custom dark:bg-night-600">
+<ul #submenuRef class="mt-2 space-y-0.5 rounded-md bg-white py-3 shadow-custom dark:bg-night-600">
   <li class="flex font-semibold text-gray-600 dark:text-night-200" *ngFor="let item of submenu">
     <!-- Condition -->
     <ng-container
