--- a/src/app/modules/auth/pages/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/pages/sign-in/sign-in.component.html
@@ -25,7 +25,7 @@
         <input
           type="text"
           id="email"
-          [ngClass]="{ 'is__invalid-input': submitted && f['email'].errors }"
+          [ngClass]="{ 'is__invalid-input': submitted && formControls['email'].errors }"
           class="peer block"
           placeholder=" "
           formControlName="email" />
@@ -35,9 +35,9 @@
           Email address
         </label>
       </div>
-      <div *ngIf="submitted && f['email'].errors" class="is__invalid-error">
-        <div *ngIf="f['email'].errors['required']">Required field</div>
-        <div *ngIf="f['email'].errors['email']">Email must be an email address valid</div>
+      <div *ngIf="submitted && formControls['email'].errors" class="is__invalid-error">
+        <div *ngIf="formControls['email'].errors['required']">Required field</div>
+        <div *ngIf="formControls['email'].errors['email']">Email must be an email address valid</div>
       </div>
     </div>
 
@@ -46,7 +46,7 @@
         <input
           [type]="passwordTextType ? 'text' : 'password'"
           id="password"
-          [ngClass]="{ 'is__invalid-input': submitted && f['email'].errors }"
+          [ngClass]="{ 'is__invalid-input': submitted && formControls['email'].errors }"
           class="peer block"
           placeholder=" "
           formControlName="password" />
@@ -68,8 +68,8 @@
           </svg-icon>
         </span>
       </div>
-      <div *ngIf="submitted && f['password'].errors" class="is__invalid-error">
-        <div *ngIf="f['password'].errors['required']">Required field</div>
+      <div *ngIf="submitted && formControls['password'].errors" class="is__invalid-error">
+        <div *ngIf="formControls['password'].errors['required']">Required field</div>
       </div>
     </div>
   </div>
