main : working on authentificaion signup sigin

--- a/src/app/modules/auth/pages/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/pages/sign-in/sign-in.component.html
@@ -36,8 +36,8 @@
         </label>
       </div>
       <div *ngIf="submitted && formControls['email'].errors" class="is__invalid-error">
-        <div *ngIf="formControls['email'].errors['required']">Required field</div>
-        <div *ngIf="formControls['email'].errors['email']">Email must be an email address valid</div>
+        <div *ngIf="formControls['email'].errors?.['required']">Required field</div>
+        <div *ngIf="formControls['email'].errors?.['email']">Email must be an email address valid</div>
       </div>
     </div>
 
