--- a/src/app/modules/auth/pages/sign-up/sign-up.component.html
+++ b/src/app/modules/auth/pages/sign-up/sign-up.component.html
@@ -1,9 +1,9 @@
-<form class="my-10 space-y-6">
+<form class="my-10 space-y-6" [formGroup]="form" (ngSubmit)="signUp()" >
   <div class="text-center">
     <h2 class="mb-1 text-3xl font-semibold text-gray-700 dark:text-white">
       Sign Up <span class="text-primary-500">!</span>
     </h2>
-    <p class="text-sm text-gray-400 dark:text-night-200">Let's get started with your 30 day free trial</p>
+    <p class="text-sm text-gray-400 dark:text-night-200">Let's get started with your properties</p>
   </div>
 
   <button
@@ -20,25 +20,113 @@
   </div>
 
   <div class="space-y-3 text-left">
-    <div class="relative">
-      <input type="text" id="email" class="peer block" placeholder=" " />
-      <label
-        for="email"
-        class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-500 dark:bg-night-700 dark:text-night-200">
-        Email address
-      </label>
+    <div class="form__group">
+      <div class="relative">
+        <input
+          type="text"
+          id="first_name"
+          class="peer block"
+          placeholder=" "
+          formControlName="firstName"
+        />
+        <label
+          for="first_name"
+          class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-500 dark:bg-night-700 dark:text-night-200">
+          First Name
+        </label>
+      </div>
+      <div *ngIf="submitted && formControls['firstName'].errors" class="is__invalid-error">
+        <div *ngIf="formControls['firstName'].errors?.['required']">First name is required</div>
+      </div>
     </div>
-    <div class="relative">
-      <input type="password" id="password" class="peer block" placeholder=" " />
-      <label
-        for="password"
-        class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200">
-        Password
-      </label>
-      <span class="absolute top-2.5 right-5 cursor-pointer text-gray-400 dark:text-night-300">
-        <svg-icon src="assets/icons/heroicons/outline/eye-off.svg" [svgClass]="'h-5 w-5'"> </svg-icon>
-        <svg-icon src="assets/icons/heroicons/outline/eye.svg" [svgClass]="'h-5 w-5 hidden'"> </svg-icon>
-      </span>
+    <div class="form__group" >
+      <div class="relative">
+        <input
+          type="text"
+          id="last_name"
+          class="peer block"
+          placeholder=" "
+          formControlName="lastName"
+        />
+        <label
+          for="last_name"
+          class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-500 dark:bg-night-700 dark:text-night-200">
+          Last Name
+        </label>
+      </div>
+      <div *ngIf="submitted && formControls['lastName'].errors" class="is__invalid-error">
+        <div *ngIf="formControls['lastName'].errors?.['required']">Last name is required</div>
+      </div>
+    </div>
+    <div class="form__group" >
+      <div class="relative">
+        <input
+          type="text"
+          id="organization_name"
+          class="peer block"
+          placeholder=" "
+          formControlName="organizationName"
+        />
+        <label
+          for="organization_name"
+          class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-500 dark:bg-night-700 dark:text-night-200">
+          Organization Name
+        </label>
+      </div>
+      <div *ngIf="submitted && formControls['organizationName'].errors" class="is__invalid-error">
+        <div *ngIf="formControls['organizationName'].errors?.['required']">Organization name is required</div>
+      </div>
+    </div>
+    <div class="form__group">
+      <div class="relative">
+        <input
+          type="email"
+          id="email" class="peer block"
+          placeholder=" "
+          formControlName="email"
+        />
+        <label
+          for="email"
+          class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-500 dark:bg-night-700 dark:text-night-200">
+          Email address
+        </label>
+      </div>
+      <div *ngIf="submitted && formControls['email'].errors" class="is__invalid-error">
+        <div *ngIf="formControls['email'].errors?.['required']">Email is required</div>
+        <div *ngIf="formControls['email'].errors?.['email']">Email should be a valid address email</div>
+      </div>
+    </div>
+    <div class="form__group">
+      <div class="relative">
+        <input
+          [type]="passwordTextType ? 'text' : 'password'"
+          id="password" class="peer block"
+          placeholder=" "
+          formControlName="password"
+        />
+        <label
+          for="password"
+          class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200">
+          Password
+        </label>
+
+        <span
+          class="absolute top-2.5 right-5 cursor-pointer text-gray-400 dark:text-night-300"
+          (click)="togglePasswordTextType()">
+          <svg-icon
+            [src]="
+              !passwordTextType
+                ? 'assets/icons/heroicons/outline/eye-off.svg'
+                : 'assets/icons/heroicons/outline/eye.svg'
+            "
+            [svgClass]="'h-5 w-5'">
+          </svg-icon>
+        </span>
+      </div>
+      <div *ngIf="submitted && formControls['password'].errors" class="is__invalid-error">
+        <div *ngIf="formControls['password'].errors?.['required']">Password is required</div>
+        <div *ngIf="formControls['password'].errors?.['minLength']">Password should be at least 6 characters</div>
+      </div>
     </div>
     <!-- Password Meeter -->
     <div class="grid grid-cols-4 gap-2">
@@ -50,13 +138,24 @@
     <span class="text-xs text-gray-400 dark:text-night-300"
       >Use 8 or more characters with a mix of letters, numbers & symbols.</span
     >
-    <div class="relative">
-      <input type="password" id="confirm-password" class="peer block" placeholder=" " />
-      <label
-        for="confirm-password"
-        class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200">
-        Confirm Password
-      </label>
+    <div class="form__group">
+      <div class="relative">
+        <input
+          type="password"
+          id="confirm-password"
+          class="peer block"
+          placeholder=" "
+          formControlName="passwordConfirm"
+        />
+        <label
+          for="confirm-password"
+          class="absolute top-2 left-1 z-10 origin-[0] -translate-y-4 scale-95 transform bg-white px-2 text-sm text-gray-500 duration-300 peer-placeholder-shown:top-1/2 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:scale-100 peer-focus:top-2 peer-focus:-translate-y-4 peer-focus:scale-95 peer-focus:px-2 peer-focus:text-primary-600 dark:bg-night-700 dark:text-night-200">
+          Confirm Password
+        </label>
+      </div>
+      <div *ngIf="submitted && formControls['passwordConfirm'].value" class="is__invalid-error">
+        <div *ngIf="formControls['passwordConfirm'].errors?.['required']">Password Confirmation is required</div>
+      </div>
     </div>
   </div>
 
@@ -72,8 +171,7 @@
 
   <!-- Submit Button -->
   <button
-    type="button"
-    routerLink="/dashboard"
+    type="submit"
     class="group relative mb-10 flex w-full justify-center rounded-md border border-transparent bg-primary-500 py-2 px-4 text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2 hover:bg-primary-400">
     Sign up
   </button>
