--- a/src/app/modules/dashboard/components/podcast/podcast-card-banner/podcast-card-banner.component.html
+++ b/src/app/modules/dashboard/components/podcast/podcast-card-banner/podcast-card-banner.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex h-[300px] flex-grow flex-col rounded-lg bg-green-700 bg-contain bg-right-top bg-no-repeat"
+  class="flex h-[300px] flex-grow flex-col rounded-lg bg-primary-700 bg-contain bg-right-top bg-no-repeat"
   style="background-image: url('assets/images/podcast-episode.png')">
   <div class="flex flex-col justify-between p-10">
     <div class="mb-4 pt-0 sm:mb-14">
