--- a/src/app/modules/authentication/pages/sign-up/sign-up.component.html
+++ b/src/app/modules/authentication/pages/sign-up/sign-up.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid p-0 h-100">
         <div class="row no-gutters h-100">
-            <div class="col-lg-4 d-none d-lg-flex" style="background-image:url('../../../../assets/images/others/sign-up-1.jpg')">
+            <div class="col-lg-4 d-none d-lg-flex" style="background-image:url('../../../../../assets/images/others/sign-up-1.jpg')">
                 <div class="d-flex h-100 p-h-40 p-v-15 flex-column justify-content-between">
                     <div>
-                        <img src="../../../../assets/images/logo/logo-white.png" alt="">
+                        <img src="../../../../../assets/images/logo/logo-white.png" alt="">
                     </div>
                     <div>
                         <h1 class="text-white m-b-20 font-weight-normal">Exploring Enlink</h1>
